[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url-shortener"
version = "0.1.0"
description = "A simple async URL shortener with FastAPI and SQLModel"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.23.0",
  "sqlmodel>=0.0.8",
  "asyncpg>=0.27.0",
  "sqlalchemy>=2.0.19"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.24.1"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["url_shortener*"]